--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,10 @@
             <artifactId>jetty-server</artifactId>
             <version>${jetty.server.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-webapp</artifactId>
+            <version>${jetty.server.version}</version>
+        </dependency>
     </dependencies>
 </project>
